tests/failing/generic_lambda_duplicate_generics.rgo
foo: <T, T>(x:T, ok:()){
    ok
}
